crates/anchor-litesvm-derive/tests/compile_fail/idl_missing_file.rs
anchor_litesvm_derive::bundles_from_idl!(nonexistent);
fn main() {}
